# server/api/controllers/url/router.js
@@ -5,8 +5,10 @@ import isAuthenticated from "../../middlewares/isAuthenticated.jwt";
 export default express
   .Router()
   .post("/add-url", isAuthenticated, controller.addUrl)
-  .get("/get-url", isAuthenticated, controller.getUrl)
   .post("/delete-url", isAuthenticated, controller.deleteUrl)
   .post("/update-url", isAuthenticated, controller.updateUrl)
+  .get("/get-url", isAuthenticated, controller.getUrl)
+  .get("/get-analytics", isAuthenticated, controller.getAnalytics)
   .get("/redirect-url/:shorturl", controller.redirectUrl);
+
 // .get("/get-all-url", isAuthenticated, controller.getAllUrl);
