# server/common/api.yml
@@ -210,6 +210,36 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/AddUrlResponse"
+  
+  /url/get-analytics:
+    get:
+      tags:
+        - Url Service
+      security:
+        - JWT: []
+      parameters:
+        - name: id
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: start
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: end
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetAnalyticsResponse"
   /spec:
     get:
       tags:
@@ -357,6 +387,14 @@ components:
       type: array
       items:
         $ref: "#/components/schemas/AddUrlResponse"
+
+    GetAnalyticsResponse:
+      type: object
+      items:
+        type: array
+        items: 
+          type: string
+          example: "2020-01-01T00:00:00.000Z"
 
   securitySchemes:
     JWT:
